# patina

./: .git-blame-ignore-revs  .gitignore  .markdownlint.yml  .markdownlintignore  Cargo.toml  License-History.txt  Makefile.toml  README.md  codecov.yml  cspell.yml  deny.toml  markdownlint.yml  rust-toolchain.toml  rustfmt.toml
adv_logger/: Cargo.toml
adv_logger/src/: component.rs  integration_test.rs  lib.rs  logger.rs  memory_log.rs  protocol.rs
components/adv_logger/: Cargo.toml
components/adv_logger/src/: integration_test.rs
components/patina_adv_logger/: Cargo.toml
components/patina_adv_logger/src/: component.rs  integration_test.rs  lib.rs  logger.rs  memory_log.rs  parser.rs  protocol.rs
components/patina_mm/: Cargo.toml
components/patina_mm/src/: component.rs  config.rs  lib.rs  service.rs
components/patina_mm/tests/: README.md  patina_mm_integration.rs
components/patina_performance/: Cargo.toml
components/patina_performance/src/: _smm.rs  component.rs  config.rs  error.rs  lib.rs  log_perf_measurement.rs  performance_measurement_protocol.rs  performance_record.rs  performance_table.rs
components/patina_samples/: Cargo.toml
components/patina_samples/src/: component.rs  function_component.rs  lib.rs  struct_component.rs
core/patina_debugger/: Cargo.toml
core/patina_debugger/src/: arch.rs  dbg_target.rs  debugger.rs  lib.rs  memory.rs  system.rs  transport.rs
core/patina_internal_cpu/: Cargo.toml
core/patina_internal_cpu/src/: cpu.rs  interrupts.rs  lib.rs  paging.rs
core/patina_internal_depex/: Cargo.toml  README.md
core/patina_internal_depex/src/: lib.rs
core/patina_internal_device_path/: Cargo.toml  README.md
core/patina_internal_device_path/src/: lib.rs
core/patina_internal_performance/: Cargo.toml
core/patina_internal_performance/src/: _smm.rs  _status_code_runtime.rs  lib.rs  performance_measurement_protocol.rs  performance_table.rs
core/patina_section_extractor/: Cargo.toml
core/patina_section_extractor/src/: brotli.rs  composite.rs  crc32.rs  lib.rs  lzma.rs  uefi_decompress.rs
core/patina_stacktrace/: Cargo.toml  README.md
core/patina_stacktrace/resolve_stacktrace/: resolve_stacktrace.ps1
core/patina_stacktrace/src/: byte_reader.rs  error.rs  lib.rs  pe.rs  stacktrace.rs
core/uefi_cpu/: Cargo.toml
core/uefi_cpu/src/: paging.rs
core/uefi_debugger/: Cargo.toml
core/uefi_debugger/src/: arch.rs  dbg_target.rs  memory.rs
crates/uefi_allocator/: Cargo.toml  README.md
crates/uefi_allocator/src/: fixed_size_block_allocator.rs  lib.rs  uefi_allocator.rs
crates/uefi_allocator/tests/: integration_tests.rs
crates/uefi_collections/: Cargo.toml  README.md
crates/uefi_collections/benches/: bench_add.rs  bench_delete.rs  bench_search.rs
crates/uefi_collections/src/: bst.rs  lib.rs  node.rs  rbt.rs  sorted_slice.rs
crates/uefi_component_interface/: Cargo.toml  README.md
crates/uefi_component_interface/src/: lib.rs
crates/uefi_depex/: Cargo.toml  README.md
crates/uefi_depex/src/: lib.rs
crates/uefi_device_path/: Cargo.toml  README.md
crates/uefi_device_path/src/: lib.rs
crates/uefi_event/: Cargo.toml  README.md
crates/uefi_event/src/: lib.rs
crates/uefi_gcd/: Cargo.toml  README.md
crates/uefi_gcd/src/: gcd.rs  io_block.rs  lib.rs
crates/uefi_pecoff/: Cargo.toml  README.md
crates/uefi_pecoff/src/: error.rs  lib.rs  relocation.rs  resource_directory.rs
dxe_core/: Cargo.toml
dxe_core/examples/: std.rs
dxe_core/resources/test/: NESTEDFV.Fv
dxe_core/src/: allocator.rs  component_interface.rs  cpu_arch_protocol.rs  dispatcher.rs  driver_services.rs  dxe_services.rs  event_db.rs  events.rs  filesystems.rs  fv.rs  gcd.rs  hw_interrupt_protocol.rs  image.rs  lib.rs  memory_attributes_protocol.rs  memory_attributes_table.rs  misc_boot_services.rs  pecoff.rs  protocol_db.rs  protocols.rs  runtime.rs  systemtables.rs  test_support.rs  tpl_lock.rs
dxe_core/src/allocator/: fixed_size_block_allocator.rs  uefi_allocator.rs
dxe_core/src/gcd/: io_block.rs  memory_block.rs  spin_locked_gcd.rs
dxe_core/src/pecoff/: error.rs  relocation.rs
patina_dxe_core/: Cargo.toml  README.md
patina_dxe_core/examples/: std.rs
patina_dxe_core/resources/test/: RustImageTestDxe.efi
patina_dxe_core/src/: allocator.rs  config_tables.rs  cpu_arch_protocol.rs  debug_image_info_table.rs  decompress.rs  dispatcher.rs  driver_services.rs  dxe_services.rs  event_db.rs  events.rs  filesystems.rs  fv.rs  gcd.rs  hw_interrupt_protocol.rs  image.rs  lib.rs  memory_attributes_protocol.rs  memory_attributes_table.rs  memory_manager.rs  misc_boot_services.rs  pecoff.rs  protocol_db.rs  protocols.rs  runtime.rs  systemtables.rs  test_support.rs  tpl_lock.rs
sample_components/: Cargo.toml
sample_components/src/: function_component.rs  hello.rs  lib.rs  struct_component.rs
uefi-core/: .git-blame-ignore-revs  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Makefile.toml  README.md  cspell.yml  deny.toml  markdownlint.yml  rust-toolchain.toml  rustfmt.toml
uefi-core/.cargo/: config.toml
uefi-core/.github/: Labels.yml  release-draft-config.yml
uefi-core/section_extractor/: Cargo.toml  README.md
uefi-core/serial_writer/: Cargo.toml  README.md
uefi-core/stacktrace/: Cargo.toml  README.md
uefi-core/uefi_core/: Cargo.toml  READEME.md
uefi-core/uefi_cpu/: Cargo.toml
uefi-core/uefi_cpu_init/: Cargo.toml  README.md
uefi-core/uefi_debugger/: Cargo.toml
uefi-core/uefi_interrupt/: Cargo.toml
uefi-core/uefi_logger/: Cargo.toml  README.md
uefi-sdk/: .markdownlint.yml  Cargo.toml  LICENSE  Makefile.toml  README.md  cspell.yml  deny.toml  rust-toolchain.toml
uefi-sdk/.cargo/: config.toml
uefi-sdk/.github/: pull_request_template.md
uefi-sdk/boot_services/: Cargo.toml
uefi-sdk/driver_binding/: Cargo.toml
uefi-sdk/protocol/: Cargo.toml
uefi-sdk/runtime_services/: Cargo.toml
uefi-sdk/tpl_mutex/: Cargo.toml
uefi-sdk/uefi_protocol/: Cargo.toml
uefi-sdk/uefi_sdk/: Cargo.toml
uefi-sdk/uefi_sdk_macro/: Cargo.toml
uefi_test/: Cargo.toml  README.md
uefi_test/src/: __private_api.rs  lib.rs
(+730 files in other folders)
