[workspace]
resolver = "2"

members = [
  "components/*",
  "core/*",
  "sdk/*",
]

[workspace.package]
version = "15.0.0"
license = "BSD-2-Clause-Patent"
edition = "2021"
repository = "https://github.com/OpenDevicePartnership/patina"
publish = ["patina-fw"]

[workspace.dependencies]
alloc-no-stdlib = { version = "~2.0" }
arm-gic = { version = "^0.1.2" }
bitfield-struct = { version = "0.10" }
boot_services = { version = "15.0.0", path = "sdk/boot_services", registry = "patina-fw" }
brotli-decompressor = { version = "4.0.0", default-features = false }
cfg-if = { version = "1" }
clap = { version = '4.5.36' }
compile-time = { version = "0.2" }
crc32fast = { version = "1.4", default-features = false }
driver_binding = { version = "15.0.0", path = "sdk/driver_binding", registry = "patina-fw" }
fallible-streaming-iterator = { version = "0.1.9" }
fixedbitset = { version = "^0.5", default-features = false }
gdbstub = { version = "0.7.3", default-features = false }
goblin = { version = "^0.9", default-features = false }
lazy_static = { version = "^1" }
linked_list_allocator = { version = "^0.10" }
linkme = { version = "^0.3.29" }
log = { version = "0.4", default-features = false }
mtrr = { version = "0.1.1", registry = "patina-fw" }
mu_pi = { version = "5.2.3" }
mu_rust_helpers = { version = "3.0.1" }
paging = { version = "4.0.1", registry = "patina-fw" }
proc-macro2 = { version = "1" }
quote = { version = "1" }
r-efi = { version = "5.0.0", default-features = false }
runtime_services = { version = "15.0.0", path = "sdk/runtime_services", registry = "patina-fw" }
scroll = { version = "^0.12", default-features = false }
spin = { version = "^0.9" }
stacktrace = { version = "15.0.0", path = "core/stacktrace", registry = "patina-fw" }
syn = { version = "2" }
tpl_mutex = { version = "15.0.0", path = "sdk/tpl_mutex", registry = "patina-fw" }
uart_16550 = { version = "^0.3.2" }
uefi_collections = { version = "15.0.0", path = "core/uefi_collections", default-features = false, registry = "patina-fw" }
uefi_corosensei = { version = "0.1.3", default-features = false, registry = "patina-fw" }
uefi_cpu = { version = "15.0.0", path = "core/uefi_cpu", registry = "patina-fw" }
uefi_debugger = { version = "15.0.0", path = "core/uefi_debugger", registry = "patina-fw" }
uefi_depex = { version = "15.0.0", path = "core/uefi_depex", registry = "patina-fw" }
uefi_device_path = { version = "15.0.0", path = "core/uefi_device_path", registry = "patina-fw" }
uefi_performance = { version = "15.0.0", path = "core/uefi_performance", registry = "patina-fw" }
uefi_protocol = { version = "15.0.0", path = "sdk/uefi_protocol", registry = "patina-fw" }
uefi_sdk = { version = "15.0.0", path = "sdk/uefi_sdk", registry = "patina-fw" }
uefi_sdk_macro = { version = "15.0.0", path = "sdk/uefi_sdk_macro", registry = "patina-fw" }
uefi_test = { version = "15.0.0", path = "sdk/uefi_test", registry = "patina-fw" }
uefi_test_macro = { version = "15.0.0", path = "sdk/uefi_test_macro", registry = "patina-fw" }
uuid = { version = "1.8", default-features = false }
x86_64 = { version = "=0.15.2", default-features = false }

# dev dependencies
criterion = { version = "^0.5" }
mockall = { version = "0.13.0" }
rand = { version = "0.8" }
sample_components = { version = "15.0.0", path = "components/sample_components", registry = "patina-fw" }
section_extractor = { version = "15.0.0", path = "core/section_extractor", registry = "patina-fw" }
uint = { version = "^0.10" }
winapi = { version = "0.3" }

[profile.release]
debug = true

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 0
