[workspace]
resolver = "2"

members = ["components/*", "core/*", "sdk/*", "patina_dxe_core"]

[workspace.package]
version = "11.4.1"
license = "Apache-2.0"
edition = "2024"
rust-version = "1.89"
repository = "https://github.com/OpenDevicePartnership/patina"

[workspace.dependencies]
alloc-no-stdlib = { version = "~2.0" }
arm-gic = { version = "0.5" }
safe-mmio = { version = "0.2.5" }
bitfield-struct = { version = "0.10" }
brotli-decompressor = { version = "4.0.0", default-features = false }
cfg-if = { version = "1" }
clap = { version = '4.5.36' }
compile-time = { version = "0.2" }
crc32fast = { version = "1.4", default-features = false }
fallible-streaming-iterator = { version = "0.1.9" }
fixedbitset = { version = "^0.5", default-features = false }
gdbstub = { version = "0.7.3", default-features = false }
goblin = { version = "~0.10.2", default-features = false }
indoc = { version = "2.0" }
lazy_static = { version = "^1" }
linked_list_allocator = { version = "^0.10" }
linkme = { version = "^0.3.29" }
log = { version = "0.4", default-features = false }
mu_rust_helpers = { version = "3.0.2" }
num-traits = { version = "0.2", default-features = false }
patina = { version = "11.4.1", path = "sdk/patina" }
patina_debugger = { version = "11.4.1", path = "core/patina_debugger" }
patina_ffs = { version = "11.4.1", path = "sdk/patina_ffs" }
patina_ffs_extractors = { version = "11.4.1", path = "sdk/patina_ffs_extractors" }
patina_internal_collections = { version = "11.4.1", path = "core/patina_internal_collections", default-features = false }
patina_internal_cpu = { version = "11.4.1", path = "core/patina_internal_cpu" }
patina_internal_depex = { version = "11.4.1", path = "core/patina_internal_depex" }
patina_internal_device_path = { version = "11.4.1", path = "core/patina_internal_device_path" }
patina_lzma_rs = { version = "0.3.1", default-features = false }
patina_macro = { version = "11.4.1", path = "sdk/patina_macro" }
patina_mtrr = { version = "1.0.0" }
patina_paging = { version = "9" }
patina_performance = { version = "11.4.1", path = "components/patina_performance" }
patina_pi = { version = "11.4.1", path = "sdk/patina_pi" }
patina_stacktrace = { version = "11.4.1", path = "core/patina_stacktrace" }
proc-macro2 = { version = "1" }
quote = { version = "1" }
r-efi = { version = "5.0.0", default-features = false }
scroll = { version = "0.13", default-features = false, features = ["derive"]}
spin = { version = "^0.9" }
syn = { version = "2" }
uart_16550 = { version = "^0.3.2" }
uefi_corosensei = { version = "0.1.3", default-features = false }
uuid = { version = "1.8", default-features = false }
x86_64 = { version = "=0.15.2", default-features = false }
zerocopy = { version = "0.8" }
zerocopy-derive = { version = "0.8" }

# dev dependencies
criterion = { version = "^0.5" }
mockall = { version = "0.13.0" }
rand = { version = "0.8" }
ruint = { version = "1" }
winapi = { version = "0.3" }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_yaml = { version = "0.9" }
serde_json = { version = "1.0", default-features = false }
lzma-rs = { version = "0.3" }

[profile.release]
debug = true

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = false
codegen-units = 1
