[package]
name = "adv_logger"
resolver = "2"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
description = "Advanced logger support."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
uefi_sdk = { workspace = true }
mu_pi = { workspace = true }
r-efi = { workspace = true }
spin = { workspace = true }
mu_rust_helpers = { workspace = true }
