[package]
name = "sample_components"
resolver = "2"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
description = "Sample UEFI components for the DXE Core."

[lib]
name = "sample_components"
path = "src/lib.rs"

[dependencies]
log = { workspace = true }
uefi_sdk = { workspace = true }

[features]
std = []
