[workspace]
resolver = "2"

members = [
  "uefi_cpu",
  "uefi_debugger",
  "section_extractor",
]

[workspace.package]
repository = "https://github.com/pop-project/uefi-core"
license = "BSD-2-Clause-Patent"
edition = "2021"
include = [
  "Cargo.toml",
  "LICENSE*",
  "README.md"
]

[workspace.dependencies]
uefi_cpu = { path = "uefi_cpu", version = "7.1.0" }

# External Libraries
uefi_sdk = {git = "https://github.com/pop-project/uefi-sdk.git", rev = "v0.1.3" }
lazy_static = { version = "^1", features = ["spin_no_std"] }
log = { version = "^0.4", default-features = false }
r-efi = { version = "^5", default-features = false }
spin = "^0.9"
uart_16550 = "^0.3.2"
x86_64 = { version= "^0.14", default-features = false, features = ["instructions", "abi_x86_interrupt"] }
mu_pi = {git = "https://github.com/microsoft/mu_rust_pi.git", tag = "v5.1.1"}
mu_rust_helpers = { git = "https://github.com/microsoft/mu_rust_helpers", tag = "v1.2.1", default-features = false}
mockall = "0.13.0"
paging = { git = "https://github.com/pop-project/paging.git", rev = "4ca4452d6fdd2216abf8b0ba509b6ebe433e3646" }
mtrr = { git = "https://github.com/pop-project/mtrr.git", rev = "25a88e3e3062933b59b211bd01bc1f8a64b11f09" }
cfg-if = "1.0.0"

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 0
