[workspace]
resolver = "2"

members = [
  "uefi_cpu",
  "uefi_debugger",
  "section_extractor",
  "stacktrace",
]

[workspace.package]
version = "10.0.0"
publish = ["UefiRust"]
repository = "https://github.com/OpenDevicePartnership/uefi-core"
license = "BSD-2-Clause-Patent"
edition = "2021"

[workspace.dependencies]
uefi_cpu = { path = "uefi_cpu", version = "10" }
stacktrace = { version = "9" }

# External Libraries
arm-gic = "^0.1.2"
cfg-if = "1.0.0"
lazy_static = { version = "^1", features = ["spin_no_std"] }
log = { version = "^0.4", default-features = false }
mockall = "0.13.0"
mtrr = { version = "0.1" }
mu_pi = { version = "5.2.0" }
mu_rust_helpers = { version = "2", default-features = false}
paging = { version = "2.0.0" }
r-efi = { version = "^5", default-features = false }
spin = "^0.9"
uart_16550 = "^0.3.2"
uefi_sdk = { version = "2" }
x86_64 = { version= "=0.14.12", default-features = false, features = ["instructions", "abi_x86_interrupt"] }
bitfield-struct = "0.9.2"

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 0
