[workspace]
resolver = "2"

members = [
  "uefi_sdk",
  "boot_services",
  "driver_binding",
  "uefi_protocol",
  "runtime_services",
  "tpl_mutex",
  "uefi_sdk_macro",
]

[workspace.package]
version = "3.0.0"
publish = ["UefiRust"]
repository = "https://github.com/OpenDevicePartnership/uefi-sdk"
license = "BSD-2-Clause-Patent"
edition = "2021"

[workspace.dependencies]
boot_services = { path = "./boot_services", version = "3" }
driver_binding = { path = "./driver_binding", version = "3" }
runtime_services = { path = "./runtime_services", version = "3" }
tpl_mutex = { path = "./tpl_mutex", version = "3" }
uefi_protocol = { path = "./uefi_protocol", version = "3" }
uefi_sdk_macro = { path = "./uefi_sdk_macro", version = "3" }

criterion = "^0.5"
fixedbitset = { version = "^0.5", default-features = false }
log = { version = "^0.4", default-features = false }
mu_pi = "^5"
r-efi = { version = "^5", default-features = false }
uart_16550 = "^0.3.2"
x86_64 = { version = "=0.14.12", default-features = false, features = [
  "instructions",
] }

# Proc macro dependencies
syn = { version = "^2", features = ["full"] }
quote = "^1"
proc-macro2 = "^1"
uuid = "^1"

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 0
