[package]
name = "uefi_test"
version = "2.0.0"
edition = "2021"
readme = "README.md"
description = "An on-platform test harness for UEFI firmware."
license.workspace = true
repository.workspace = true

[features]
default = []
off = ["uefi_test_macro/off"]

[lib]
name = "uefi_test"
path = "src/lib.rs"

[dependencies]
log = { workspace = true }
uefi_component_interface = { workspace = true }
uefi_core = { workspace = true }
uefi_test_macro = { workspace = true }
linkme = { workspace = true}

[dev-dependencies]
r-efi = { workspace = true }
mockall = { workspace = true }
