[package]
name = "uefi_test"
resolver = "2"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
readme = "README.md"
description = "An on-platform test harness for UEFI firmware."

[features]
default = []
off = ["uefi_test_macro/off"]

[lib]
name = "uefi_test"
path = "src/lib.rs"

[dependencies]
log = { workspace = true }
uefi_component_interface = { workspace = true }
uefi_sdk = { workspace = true }
uefi_test_macro = { workspace = true }
linkme = { workspace = true}

[dev-dependencies]
r-efi = { workspace = true }
mockall = { workspace = true }
