[package]
name = "patina_mm"
resolver = "2"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description = "Management Mode (MM) support for components."

[dependencies]
cfg-if = { workspace = true }
log = { workspace = true }
mockall = { workspace = true, optional = true }
r-efi = { workspace = true }
patina = { workspace = true }
zerocopy = { workspace = true }
zerocopy-derive = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
mockall = { workspace = true }
patina = { workspace = true, features = ["mockall"] }

[target.'cfg(target_arch="x86_64")'.dependencies]
x86_64 = { workspace = true, features = [
  "instructions",
] }

[features]
doc = []
mockall = ["dep:mockall", "std"]
std = []
