[package]
name = "patina_performance"
resolver = "2"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description = "Performance support for the DXE Core."

[dependencies]
r-efi = { workspace = true }
scroll = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }

mu_rust_helpers = { workspace = true }
patina = { workspace = true }
patina_internal_device_path = { workspace = true }

[dev-dependencies]
patina = { path = "../../sdk/patina", features = ["mockall"] }
mockall = { workspace = true }
