[package]
name = "patina_samples"
resolver = "2"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
description = "Sample UEFI components for the DXE Core."

[dependencies]
log = { workspace = true }
patina_sdk = { workspace = true }

[features]
std = []
