[package]
name = "patina_samples"
resolver = "2"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description = "Sample UEFI components for the DXE Core."

[dependencies]
log = { workspace = true }
patina = { workspace = true }

[features]
std = []
