[package]
name = "patina_debugger"
resolver = "2"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
description = "Debugger implementation for a Patina Core."

[dependencies]
cfg-if = { workspace = true }
gdbstub = { workspace = true }
patina = { workspace = true }
patina_internal_cpu = { workspace = true }
log = { workspace = true }
spin = { workspace = true }
patina_paging = { workspace = true  }
bitfield-struct = { workspace = true  }

[dev-dependencies]
mockall = { workspace = true }

[features]
default = ["alloc", "windbg_workarounds"]
alloc = []
windbg_workarounds = []
