[package]
name = "patina_internal_depex"
resolver = "2"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
readme = "README.md"
description = "A dependency expression (depex) parsing implementation for the DXE Core."

[dependencies]
r-efi = { workspace = true }
uuid = { workspace = true }
log = { workspace = true }
