[package]
name = "patina_stacktrace"
resolver = "2"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
description = "Stack Tracing library."

[dependencies]
cfg-if = { workspace = true }
log = { workspace = true }

[dev-dependencies]
winapi = { workspace = true, features = [
    "psapi",
    "libloaderapi",
    "minwinbase",
    "errhandlingapi",
    "processthreadsapi",
    "winbase",
    "synchapi",
    "debugapi",
] }

[features]
std = []
doc = []
