[package]
name = "uefi_cpu"
resolver = "2"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
description = "CPU support."

[package.metadata.docs.rs]
features = ["doc", "std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "uefi_cpu"
path = "src/lib.rs"

[dependencies]
lazy_static = { workspace = true, features = ["spin_no_std"] }
log = { workspace = true }
r-efi = { workspace = true }
uefi_sdk = { workspace = true }
spin = { workspace = true, features = ["rwlock"] }
paging = { workspace = true }
mu_pi = { workspace = true }
cfg-if = { workspace = true }
stacktrace = { workspace = true }

[target.'cfg(all(target_arch="x86_64"))'.dependencies]
x86_64 = { workspace = true, features = [
    "instructions",
    "abi_x86_interrupt",
] }
mtrr = { workspace = true }

[target.'cfg(all(target_arch="aarch64"))'.dependencies]
arm-gic = { workspace = true }

[dev-dependencies]
x86_64 = { workspace = true, features = [
    "instructions",
    "abi_x86_interrupt",
] }
mockall = { workspace = true }

[features]
default = []
std = []
doc = []
