[package]
name = "uefi_debugger"
resolver = "2"
version.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true
description = "Debugger implementation for a UEFI Core."

[lib]
name = "uefi_debugger"
path = "src/lib.rs"

[dependencies]
cfg-if = { workspace = true }
gdbstub = { workspace = true }
uefi_sdk = { workspace = true }
uefi_cpu = { workspace = true }
log = { workspace = true }
spin = { workspace = true }
patina-paging = { workspace = true  }
bitfield-struct = { workspace = true  }

[dev-dependencies]
mockall = { workspace = true }

[features]
default = ["alloc", "windbg_workarounds"]
alloc = []
windbg_workarounds = []
